...
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <androidx.appcompat.widget.Toolbar
           android:id="@+id/toolbar"
           android:layout_width="match_parent"
           android:layout_height="?android:attr/actionBarSize"
           android:background="?android:attr/colorPrimary"
           android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

       <FrameLayout
...
   </LinearLayout>

   <!-- Container for contents of drawer - use NavigationView to make configuration easier -->


   <com.google.android.material.navigation.NavigationView
       android:id="@+id/nav_view"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:layout_gravity="start"
       android:fitsSystemWindows="true"
       app:headerLayout="@layout/nav_header"
       app:menu="@menu/drawer_view" />
...
