...
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statistics_user_name" />

            <TextView
                android:id="@+id/statistics_user_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="0 House Points | 0 Individual Points"
                android:textAlignment="center"
...
